--- a/templates/blog_template.html
+++ b/templates/blog_template.html
@@ -5,6 +5,7 @@
     <title>{{ title }}</title>
 </head>
 <body>
+    <a href="/">Home</a>
     <div id="content">{{ content | safe }}</div>
 </body>
 </html>
